Fix issue with carousel images getting squashed as viewport scales

--- a/css/style.css
+++ b/css/style.css
@@ -226,11 +226,13 @@ header {
 
 .carousel-item img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
 .carousel-item {
   width: 25%;
+  flex-shrink: 0;
+  
 }
 .carousel-item:hover {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
